# python-jsonrpc

./: README.md  endpoints.py  pyproject.toml
src/jsonrpc/: __init__.py  client.py  endpoints.py  server.py
