[build-system]
requires = [
  "setuptools>=64",
  "wheel",
]

build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[project]
name = "jsonrpc"
dynamic = ["version"]
description = ""
authors = [{ name = "cde-sede" }, { email = "clement.desede@gmail.com" }]
maintainers = [{ name = "cde-sede" }, { email = "clement.desede@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
]
dependencies = []
